# Proyecto1_Arquitectura_Sistemas

./: CMakeLists.txt  MakeFile  README.md  main.c
Funciones/Wificollector_Collect/: wificollector_collect.c  wificollector_collect.h
Funciones/Wificollector_Display/: wificollector_display.c  wificollector_display.h
Funciones/Wificollector_Display_All/: wificollector_display_all.c  wificollector_display_all.h
Funciones/Wificollector_Quit/: wificollector_quit.c  wificollector_quit.h
exe/: Makefile
incl/: wificollector_collect.h  wificollector_delete_net.h  wificollector_display.h  wificollector_display_all.h  wificollector_export.h  wificollector_import.h  wificollector_quit.h
src/: main.c  wificollector_collect.c  wificollector_delete_net.c  wificollector_display.c  wificollector_display_all.c  wificollector_export.c  wificollector_import.c  wificollector_quit.c
